--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 try {
                     // Send the URL to our backend server
-                    const response = await fetch('http://localhost:3000/download', {
+                    const response = await fetch('https://vedio-downloader.onrender.com/download', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
